# transactions

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: Dockerfile  configure_pg_cron.sh  init_db.sql
protos/: sum_amount.proto
src/app/: __main__.py  transactions_server.py  transactions_service.py
src/grpc_output/: sum_amount_pb2.py  sum_amount_pb2_grpc.py
src/persistence/: database.py  models.py  transactions_repository.py
src/validation/: sum_amount_request.py  sum_amount_response.py
